# foxbox

./: .gitignore  .travis.yml  Cargo.toml  README.md  proxy.js
docs/: user-manual.md
scripts/: apiCall.js  createClientCert.sh  deploy-challenge.sh  make-root-ca-and-certificates.sh  update.sh
src/: context.rs  controler.rs  controller.rs  http_server.rs  main.rs  tls_config.rs  websocket.rs  websocket_server.rs
static/: index.html  main.js
