[package]
name = "foxbox"
version = "0.1.0"
authors = ["fabrice <fabrice@desre.org>"]

[dependencies]
getopts = "*"
hyper = "*"
iron = "*"
mio = { git = "https://github.com/carllerche/mio.git" }
mount = "*"
router = "*"
staticfile = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"
uuid = "*"
ws = "*"
